--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,28 @@
 .nav-item{
   margin: 15px;
 }
+
+footer {
+  list-style: none;
+  display: flex;
+}
+
+
+.portfolio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+}
+
+.portfolio-title {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  padding: 20%;
+}
+
+.project-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 15px;
+}
